@@ -12,7 +12,7 @@ IdentifiesAs permits objects to identify as if they are other types of objects.
 
 == Description
 
-Provides IdentifiesAs, which offers :identifies_as!, :instances_identify_as!, :identifies_as?, :instances_identify_as?, :no_longer_identifies_as!, :instances_no_longer_identify_as, :identities, :instance_identities, and overrides :is_a? and :===.
+Provides IdentifiesAs, which offers :identifies_as!, :instances_identify_as!, :identifies_as?, :instances_identify_as?, :stop_identifying_as!, :stop_instances_identifying_as, :identities, :instance_identities, and overrides :is_a? and :===.
 
 == Install
 
